# midea-protocol

./: Cargo.toml  LICENSE
src/: crc.rs  lib.rs
src/cloud/: mod.rs  security.rs
