[package]
name = "midea-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
base16ct = { version = "0.2.0", features = ["std"] }
bytes = "1.10.1"
cbc = { version = "0.1.2", features = ["std"] }
hmac = { version = "0.12.1", features = ["std"] }
reqwest = "0.12.15"
sha2 = "0.10.8"
tokio = { version = "1.44.2", features = ["bytes"] }
